# subxt

examples/: Cargo.toml
examples/avail_example/: Cargo.toml
examples/avail_example/src/: avail_subxt_config.rs  main.rs
examples/examples/: avail.metadata.scale  avail_subxt_config.rs  balance_transfer.rs  finalized_header.rs  submit_data.rs
subxt/src/: client.rs  lib.rs
subxt/src/extrinsic/: extra.rs  mod.rs
